--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,11 @@
     "body-parser": "^1.17.2",
     "cors": "^2.8.4",
     "express": "^4.15.4",
-    "morgan": "^1.8.2"
+    "joi": "^10.6.0",
+    "morgan": "^1.8.2",
+    "pg": "^7.3.0",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.8.2"
   },
   "devDependencies": {
     "eslint": "^4.6.1",
