--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.4",
     "express": "^4.15.4",
     "joi": "^10.6.0",
+    "jsonwebtoken": "^8.0.0",
     "morgan": "^1.8.2",
     "pg": "^7.3.0",
     "pg-hstore": "^2.3.2",
