use bcrypt to encrypt user password

--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
   "author": "Raphael Akpan",
   "license": "MIT",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
+    "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
     "cors": "^2.8.4",
     "express": "^4.15.4",
