--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "express": "^4.15.4",
     "joi": "^10.6.0",
     "jsonwebtoken": "^8.0.0",
+    "lodash": "^4.17.4",
     "morgan": "^1.8.2",
     "pg": "^7.3.0",
     "pg-hstore": "^2.3.2",
